# bactria

./: .clang-format  .gitignore  Activation_8hpp.html  Activation_8hpp.js  Activation_8hpp__dep__incl.map  Activation_8hpp__dep__incl.md5  Activation_8hpp__incl.map  Activation_8hpp__incl.md5  Activation_8hpp_source.html  CMakeLists.txt  Category_8hpp.html  Category_8hpp__dep__incl.map  Category_8hpp__dep__incl.md5  Category_8hpp__incl.map  Category_8hpp__incl.md5  Category_8hpp_source.html  Colors_8hpp.html  Colors_8hpp.js  Colors_8hpp__dep__incl.map  Colors_8hpp__dep__incl.md5  Colors_8hpp_source.html  Context_8hpp.html  Context_8hpp__dep__incl.map  Context_8hpp__dep__incl.md5  Context_8hpp__incl.map  Context_8hpp__incl.md5  Context_8hpp_source.html  Event_8hpp.html  Event_8hpp.js  Event_8hpp__dep__incl.map  Event_8hpp__dep__incl.md5  Event_8hpp__incl.map  Event_8hpp__incl.md5  Event_8hpp_source.html  IncidentRecorder_8hpp.html  IncidentRecorder_8hpp__dep__incl.map  IncidentRecorder_8hpp__dep__incl.md5  IncidentRecorder_8hpp__incl.map  IncidentRecorder_8hpp__incl.md5  IncidentRecorder_8hpp_source.html  (+320 more)
.github/workflows/: gh-pages.yml
cmake/modules/: FindrocTracer.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  license.rst  user.rst
docs/examples/: bar.cpp  baz.cpp  foo.cpp  main.cpp  my_orange.cpp
docs/user/: event.rst  phase.rst  region.rst
examples/: CMakeLists.txt
examples/configuration/: bactriaConfig.toml
examples/gpu_annotation/: CMakeLists.txt  cuda.cu  hip.cpp
examples/simpleLoop/: CMakeLists.txt  main.cpp
include/bactria/: Category.hpp  Colors.hpp  Context.hpp  Event.hpp  Incident.hpp  IncidentRecorder.hpp  Marker.hpp  Phase.hpp  Plugin.hpp  PluginInterface.hpp  Range.hpp  Record.hpp  Report.hpp  Sector.hpp  Tags.hpp  bactria.hpp  event.hpp  phase.hpp  plugin.hpp  region.hpp
include/bactria/core/: Activation.hpp  Context.hpp  POSIX.hpp  Plugin.hpp  Win32.hpp
include/bactria/detail/: Activation.hpp  POSIX.hpp  PluginInterface.hpp  Win32.hpp  plugin_interface.hpp  posix.hpp  win32.hpp
include/bactria/metrics/: Phase.hpp  Plugin.hpp  PluginInterface.hpp  Sector.hpp  Tags.hpp
include/bactria/ranges/: Category.hpp  Colors.hpp  Event.hpp  Marker.hpp  Plugin.hpp  PluginInterface.hpp  Range.hpp
include/bactria/reports/: Incident.hpp  IncidentRecorder.hpp  Plugin.hpp  PluginInterface.hpp  Report.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+56 more)
src/: CMakeLists.txt
src/metrics/: CMakeLists.txt
src/metrics/scorep/: CMakeLists.txt  Configuration.cpp  Metrics.cpp
src/printf/: BodyInstrumentation.cpp  BodyInstrumentation.hpp  CMakeLists.txt  Common.hpp  FunctionInstrumentation.cpp  FunctionInstrumentation.hpp  GenericInstrumentation.cpp  GenericInstrumentation.hpp  Instrumentation.cpp  LoopInstrumentation.cpp  LoopInstrumentation.hpp  Markers.cpp  PhaseInstrumentation.cpp  PhaseInstrumentation.hpp  plugin.cpp
src/ranges/: CMakeLists.txt
src/ranges/nvtx/: CMakeLists.txt  Ranges.cpp
src/ranges/roctx/: CMakeLists.txt  Ranges.cpp
src/ranges/stdout/: CMakeLists.txt  Ranges.cpp
src/reports/json/: CMakeLists.txt  Reports.cpp
